# godot_relay_peer

./: .gitignore  .sconsign.dblite  CMakeLists.txt  SConstruct
.github/workflows/: build.yml
demo/: icon.svg.import  project.godot  test.tscn
demo/addons/relay/: librelaypeer.windows.template_debug.x86_64.exp  librelaypeer.windows.template_debug.x86_64.lib  relay.gdextension
demo/addons/relay/librelaypeer.macos.template_debug.framework/: librelaypeer.macos.template_debug
demo/scripts/: test.gd
src/: packet.cpp  packet.h  register_types.cpp  register_types.h  register_types.os  relay_peer.cpp  relay_peer.h  relay_peer.os
